packages/wxscan/lib/src/bindings.dart

// Generated by package:ffigen from src/wxscan.h. Do not edit.
// ignore_for_file: type=lint, unused_field, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
@ffi.DefaultAsset('package:wxscan/src/bindings.dart')
library;

import 'dart:ffi' as ffi;

/// Run detection and decoding on an upright, tightly packed grayscale image.
///
/// Returns NULL if the scanner or the buffer is invalid; an empty result set
/// means nothing was found. The result must be released with
/// [`crate::results::wxscan_results_free`].
///
/// # Safety
/// `scanner` must come from [`crate::scanner::wxscan_scanner_new`] and `data`
/// must point to at least `width * height` readable bytes that stay valid for
/// the duration of the call.
@ffi.Native<
  ffi.Pointer<WxScanResults> Function(
    ffi.Pointer<WxScanScanner>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
  )
>()
external ffi.Pointer<WxScanResults> wxscan_scan_gray(
  ffi.Pointer<WxScanScanner> scanner,
  ffi.Pointer<ffi.Uint8> data,
  int width,
  int height,
);

/// Run detection and decoding on a colour image, converting it to grayscale
/// first.
///
/// This exists so that a caller decoding a PNG or a JPEG does not have to
/// convert the pixels itself; the conversion here is the same one the algorithm
/// applies internally.
///
/// `format` is a [`WxScanPixelFormat`]. Rows are tightly packed, so the buffer
/// must hold `width * height * bytes_per_pixel` bytes.
///
/// Returns NULL on invalid input. The result must be released with
/// [`crate::results::wxscan_results_free`].
///
/// # Safety
/// `scanner` must come from [`crate::scanner::wxscan_scanner_new`] and `data`
/// must point to at least that many readable bytes, valid for the duration of
/// the call.
@ffi.Native<
  ffi.Pointer<WxScanResults> Function(
    ffi.Pointer<WxScanScanner>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
  )
>()
external ffi.Pointer<WxScanResults> wxscan_scan_pixels(
  ffi.Pointer<WxScanScanner> scanner,
  ffi.Pointer<ffi.Uint8> data,
  int width,
  int height,
  int format,
);

/// Prepare a camera frame and scan it.
///
/// * `row_stride` is the byte distance between rows of the Y plane and may
/// exceed `width`.
/// * `rotation` is the clockwise angle in degrees needed to bring the frame
/// upright.
/// * `mirror_output`, when non-zero, mirrors the returned x coordinates about
/// the vertical axis of the upright frame. The frame itself is never
/// mirrored: the CNN detector is trained on unmirrored input, so mirroring it
/// lowers the detection rate. Use this when the preview is displayed
/// mirrored, as front-facing camera previews usually are.
///
/// Returns NULL on invalid input. The result must be released with
/// [`crate::results::wxscan_results_free`].
///
/// # Safety
/// `scanner` must come from [`crate::scanner::wxscan_scanner_new`] and `data`
/// must point to at least `row_stride * height` readable bytes that stay valid
/// for the duration of the call.
@ffi.Native<
  ffi.Pointer<WxScanResults> Function(
    ffi.Pointer<WxScanScanner>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
  )
>()
external ffi.Pointer<WxScanResults> wxscan_scan_frame(
  ffi.Pointer<WxScanScanner> scanner,
  ffi.Pointer<ffi.Uint8> data,
  int width,
  int height,
  int row_stride,
  int rotation,
  int mirror_output,
);

/// Read an image file and scan it.
///
/// This exists so that a caller holding a path does not have to decode the
/// picture itself and hand over the pixels: a 12 megapixel photograph is 48 MB
/// as RGBA, and a caller that crosses a thread or an isolate boundary pays for
/// that buffer more than once. Here the file is read, decoded and reduced to
/// grayscale without any of it crossing the boundary.
///
/// `status`, when not NULL, is set to a [`WxScanStatus`] saying what happened.
/// Returns NULL for anything other than [`WxScanStatus::Ok`]. The result must
/// be released with [`crate::results::wxscan_results_free`].
///
/// The orientation recorded in the file is applied, so a photograph taken with
/// the phone turned sideways is scanned upright and the coordinates come back
/// in the picture as it is meant to be seen.
///
/// # Safety
/// `scanner` must come from [`crate::scanner::wxscan_scanner_new`], `path` must
/// be a NUL terminated string, and `status`, when not NULL, must point to a
/// writable [`WxScanStatus`].
@ffi.Native<
  ffi.Pointer<WxScanResults> Function(
    ffi.Pointer<WxScanScanner>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Int32>,
  )
>()
external ffi.Pointer<WxScanResults> wxscan_scan_path(
  ffi.Pointer<WxScanScanner> scanner,
  ffi.Pointer<ffi.Char> path,
  ffi.Pointer<ffi.Int32> status,
);

/// Link probe: returns 1 when the library is linked in correctly.
@ffi.Native<ffi.Int32 Function()>()
external int wxscan_ping();

/// Free a result set and everything it owns. Passing NULL is a no-op.
///
/// # Safety
/// The pointer must come from a scan function of this library and must be freed
/// at most once.
@ffi.Native<ffi.Void Function(ffi.Pointer<WxScanResults>)>()
external void wxscan_results_free(ffi.Pointer<WxScanResults> r);

/// Create a scanner from in-memory model buffers.
///
/// Passing NULL for both models selects the image-processing-only mode. It
/// still decodes, but the detection rate for small or distant symbols is
/// considerably lower, since that is what the CNN stage contributes.
///
/// Returns NULL if a model fails to load. Release with [`wxscan_scanner_free`].
///
/// # Safety
/// `detect` and `sr`, when not NULL, must point to at least the corresponding
/// number of readable bytes.
@ffi.Native<
  ffi.Pointer<WxScanScanner> Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
  )
>()
external ffi.Pointer<WxScanScanner> wxscan_scanner_new(
  ffi.Pointer<ffi.Uint8> detect,
  int detect_len,
  ffi.Pointer<ffi.Uint8> sr,
  int sr_len,
);

/// Set the downscale factor applied before detection.
///
/// Values outside `(0, 1]` restore the default, which targets a 400x400 area.
///
/// # Safety
/// `s` must come from [`wxscan_scanner_new`].
@ffi.Native<ffi.Void Function(ffi.Pointer<WxScanScanner>, ffi.Float)>()
external void wxscan_scanner_set_scale_factor(
  ffi.Pointer<WxScanScanner> s,
  double v,
);

/// Destroy a scanner. Passing NULL is a no-op.
///
/// # Safety
/// The pointer must come from [`wxscan_scanner_new`] and must be freed at most once.
@ffi.Native<ffi.Void Function(ffi.Pointer<WxScanScanner>)>()
external void wxscan_scanner_free(ffi.Pointer<WxScanScanner> s);

/// The downscale factor applied before detection, as set by
/// [`wxscan_scanner_set_scale_factor`]. A negative value means the default,
/// which targets a 400x400 area.
///
/// # Safety
/// `s` must come from [`wxscan_scanner_new`].
@ffi.Native<ffi.Float Function(ffi.Pointer<WxScanScanner>)>()
external double wxscan_scanner_scale_factor(ffi.Pointer<WxScanScanner> s);

/// How confident the detector must be to report a candidate, 0.2 by default.
///
/// Lower recalls more weak symbols along with more false positives; higher does
/// the reverse. Values outside `(0, 1)` are ignored. Without models there is no
/// detector and this does nothing.
///
/// # Safety
/// `s` must come from [`wxscan_scanner_new`].
@ffi.Native<ffi.Void Function(ffi.Pointer<WxScanScanner>, ffi.Float)>()
external void wxscan_scanner_set_confidence_threshold(
  ffi.Pointer<WxScanScanner> s,
  double v,
);

/// The confidence threshold in use, or a negative value when no detector is
/// loaded.
///
/// # Safety
/// `s` must come from [`wxscan_scanner_new`].
@ffi.Native<ffi.Float Function(ffi.Pointer<WxScanScanner>)>()
external double wxscan_scanner_confidence_threshold(
  ffi.Pointer<WxScanScanner> s,
);

/// The IoU above which two overlapping candidates are treated as one symbol,
/// 0.45 by default. Values outside `(0, 1)` are ignored.
///
/// # Safety
/// `s` must come from [`wxscan_scanner_new`].
@ffi.Native<ffi.Void Function(ffi.Pointer<WxScanScanner>, ffi.Float)>()
external void wxscan_scanner_set_nms_threshold(
  ffi.Pointer<WxScanScanner> s,
  double v,
);

/// The NMS threshold in use, or a negative value when no detector is loaded.
///
/// # Safety
/// `s` must come from [`wxscan_scanner_new`].
@ffi.Native<ffi.Float Function(ffi.Pointer<WxScanScanner>)>()
external double wxscan_scanner_nms_threshold(ffi.Pointer<WxScanScanner> s);

/// Whether the detector network is loaded.
///
/// # Safety
/// `s` must come from [`wxscan_scanner_new`].
@ffi.Native<ffi.Int32 Function(ffi.Pointer<WxScanScanner>)>()
external int wxscan_scanner_has_detector(ffi.Pointer<WxScanScanner> s);

/// Whether the super resolution network is loaded.
///
/// # Safety
/// `s` must come from [`wxscan_scanner_new`].
@ffi.Native<ffi.Int32 Function(ffi.Pointer<WxScanScanner>)>()
external int wxscan_scanner_has_super_resolution(ffi.Pointer<WxScanScanner> s);

/// Why [`wxscan_scan_path`] returned nothing.
///
/// A scan that finds no symbol is [`WxScanStatus::Ok`] with an empty result
/// set, which is a different thing from a file that could not be read at all.
/// Collapsing the two is how a picture the library never even saw comes back
/// looking like a picture with no code in it.
enum WxScanStatus {
  /// The file was read and scanned. The result set may still be empty.
  Ok(0),

  /// A null pointer, a path that is not UTF-8, or a null scanner.
  BadArgument(1),

  /// The path could not be opened or read.
  Unreadable(2),

  /// The bytes were read but are not an image this build can decode. PNG,
  /// JPEG, BMP, GIF, WebP and TIFF are; HEIC is not, and nor is anything
  /// else needing a system framework.
  ///
  /// A photo library is mostly HEIC, but a picker generally does not hand it
  /// over that way: on iOS, `image_picker` sniffs the first byte, finds
  /// neither JPEG nor PNG nor GIF, and re-encodes to JPEG on its way to disk.
  /// The paths worth worrying about are the ones that come from somewhere
  /// else — a file shared into the application, say — and a caller that has
  /// to read those needs the platform's own decoder and
  /// [`wxscan_scan_pixels`].
  UnsupportedFormat(3);

  final int value;
  const WxScanStatus(this.value);

  static WxScanStatus fromValue(int value) => switch (value) {
    0 => Ok,
    1 => BadArgument,
    2 => Unreadable,
    3 => UnsupportedFormat,
    _ => throw ArgumentError('Unknown value for WxScanStatus: $value'),
  };
}

final class WxScanScanner extends ffi.Opaque {}

/// One decoded symbol.
final class WxScanResult extends ffi.Struct {
  /// Raw payload bytes, in the encoding named by `charset`.
  external ffi.Pointer<ffi.Uint8> bytes;

  @ffi.Size()
  external int bytes_len;

  /// Payload decoded to UTF-8; GB2312 payloads are converted, everything else
  /// is interpreted as UTF-8 with invalid sequences replaced.
  external ffi.Pointer<ffi.Char> text;

  external ffi.Pointer<ffi.Char> charset;

  /// Corner points in the upright frame, ordered top-left, top-right,
  /// bottom-right, bottom-left, stored as `x0, y0, x1, y1, ...`.
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Float> points;

  @ffi.Int32()
  external int qrcode_version;

  external ffi.Pointer<ffi.Char> ec_level;

  external ffi.Pointer<ffi.Char> charset_mode;

  @ffi.Int32()
  external int binary_method;
}

/// Result of scanning one frame.
final class WxScanResults extends ffi.Struct {
  external ffi.Pointer<WxScanResult> results;

  @ffi.Size()
  external int results_len;

  /// Detector candidates, 8 floats per quadrilateral in the same order as
  /// [`WxScanResult::points`]. A non-empty candidate list with an empty
  /// result list means a symbol was located but not decoded.
  external ffi.Pointer<ffi.Float> candidates;

  /// Number of quadrilaterals, not the number of floats.
  @ffi.Size()
  external int candidates_len;

  /// Dimensions of the upright frame the coordinates refer to.
  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;
}
